Define the documentation category and index nodes for Spanish.

--- a/doc/info/es/maxima.texi
+++ b/doc/info/es/maxima.texi
@@ -2,4 +2,11 @@
 @setfilename  maxima.info
 @finalout
 @include include-maxima.texi
+
+@ifhtml
+@node Documentation Categories, , Índice de Funciones y Variables
+@chapter Documentation Categories
+@c Documentation categories section gets filled in by the script build_html.sh
+@end ifhtml
 @bye
+
