--- a/doc/info/pt_BR/maxima.texi
+++ b/doc/info/pt_BR/maxima.texi
@@ -22,6 +22,12 @@
 @set mail <maxima at math dot utexas dot edu>
 @settitle Manual do Maxima
 @include include-maxima.texi
+
+@ifhtml
+@node Documentation Categories, , Índice de Funções e Variáveis
+@chapter Documentation Categories
+@c Documentation categories section gets filled in by the script build_html.sh
+@end ifhtml
 @bye
 
 
