--- a/doc/info/ru/maxima.texi
+++ b/doc/info/ru/maxima.texi
@@ -3,5 +3,11 @@
 @documentencoding UTF-8
 @documentlanguage ru
 @include include-maxima.texi
+
+@ifhtml
+@node Documentation Categories, , Указатель функций и переменных
+@chapter Documentation Categories
+@c Documentation categories section gets filled in by the script build_html.sh
+@end ifhtml
 @bye
 
