--- a/doc/info/maxima.texi
+++ b/doc/info/maxima.texi
@@ -2,4 +2,10 @@
 @setfilename  maxima.info
 @finalout
 @include include-maxima.texi
+
+@ifhtml
+@node Documentation Categories, , Function and Variable Index
+@chapter Documentation Categories
+@c Documentation categories section gets filled in by the script build_html.sh
+@end ifhtml
 @bye
