Add marker to indicate doc categories section is included.
Add the line

@c Include documenation categories

to the maxima.texi files where documentation categories are
supported.  Currently this is just the English and German manuals.

Update build_html.sh.in to look for this marker which then allows the
script to insert commands to include all the category files.

--- a/doc/info/de/maxima.texi
+++ b/doc/info/de/maxima.texi
@@ -4,6 +4,7 @@
 @documentlanguage de
 @include include-maxima.texi
 
+@c Include documentation categories
 @ifhtml
 @node Documentation Categories, , Index der Variablen und Funktionen
 @chapter Documentation Categories
