--- a/doc/info/maxima.texi
+++ b/doc/info/maxima.texi
@@ -3,6 +3,7 @@
 @finalout
 @include include-maxima.texi
 
+@c Include documentation categories
 @ifhtml
 @node Documentation Categories, , Function and Variable Index
 @chapter Documentation Categories
